# spice

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CONFIG.md  DOC.md  PLUGIN.md  PROTOCOL.md  README.md  TODO.md
.github/workflows/: ci.yml
examples/: cpp-keywords.toml  demo.cpp  full.toml  lsp-complete.toml  lsp-highlight.toml
inc/spice/config/: Config.hpp  KeyName.hpp
inc/spice/core/: Base64.hpp  Buffer.hpp  Color.hpp  Command.hpp  Editor.hpp  Event.hpp  EventParser.hpp  EventReader.hpp  EventText.hpp  FileIo.hpp  Grid.hpp  KeyBytes.hpp  Layout.hpp  OptRef.hpp  Palette.hpp  Pane.hpp  PathCompletion.hpp  Position.hpp  Pty.hpp  Rectangle.hpp  Spice.hpp  TermInfo.hpp  Terminal.hpp  Theme.hpp  Utf8.hpp
inc/spice/plugin/: HostServices.hpp  Message.hpp  MsgPack.hpp  PluginHost.hpp  PluginProcess.hpp
plugins/cpp-keywords/: cpp_keywords.py
plugins/greeter/: CMakeLists.txt  main.cpp
plugins/lsp-complete/: lsp_complete.py
plugins/lsp-highlight/: lsp_highlight.py
src/: main.cpp
src/config/: CMakeLists.txt  Config.cpp  KeyName.cpp
src/core/: Base64.cpp  Buffer.cpp  CMakeLists.txt  Command.cpp  Editor.cpp  EventParser.cpp  EventReader.cpp  EventText.cpp  FileIo.cpp  Grid.cpp  KeyBytes.cpp  Layout.cpp  Palette.cpp  Pane.cpp  PathCompletion.cpp  Pty.cpp  Spice.cpp  TermInfo.cpp  Terminal.cpp  Theme.cpp
src/plugin/: CMakeLists.txt  Message.cpp  MsgPack.cpp  PluginHost.cpp  PluginProcess.cpp
tests/config/: CMakeLists.txt  test_Config.cpp  test_KeyName.cpp
tests/core/: CMakeLists.txt  test_Base64.cpp  test_Buffer.cpp  test_Command.cpp  test_Editor.cpp  test_EventParser.cpp  test_EventReader.cpp  test_EventText.cpp  test_FileIo.cpp  test_Grid.cpp  test_KeyBytes.cpp  test_Layout.cpp  test_Palette.cpp  test_Pane.cpp  test_PathCompletion.cpp  test_Pty.cpp  test_Spice.cpp  test_TermInfo.cpp  test_Terminal.cpp  test_Theme.cpp
tests/plugin/: CMakeLists.txt  test_Message.cpp  test_MsgPack.cpp  test_PluginHost.cpp
tutorial/: 01-hello-spice.md  02-commands-and-keys.md  03-reading-buffers.md  04-editing-buffers.md  05-listening-to-events.md  06-syntax-highlighting.md  07-marks.md  08-drawing-panes.md  09-plugin-to-plugin.md  10-shipping-it.md  README.md  bell.py  bookmark.py  clock.py  done.py  fortune.py  hello.py  paint.py  ping.py  plumbing.py  pong.py  todos.py
